--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,6 @@
 site_name: MeTTa Training
 site_description: MeTTa programming language Training Portal
-site_url: https://metta-training.com
+# site_url: https://metta-training.com
 
 # 1. THEME CONFIGURATION
 theme:
